# formula1-race-prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
app/: streamlit_app.py
artifacts/: eval_xgboost_circuit_is_top3.csv  eval_xgboost_circuit_is_winner.csv  eval_xgboost_driver_is_top3.csv  eval_xgboost_driver_is_winner.csv  gradient_boosting_points.pkl  logistic_regression_is_top3.pkl  logistic_regression_is_winner.pkl  random_forest_is_top3.pkl  random_forest_is_winner.pkl  xgboost_is_top3.pkl  xgboost_is_winner.pkl
data/processed/: features_2021_2025.csv  processed_results_2021.csv  processed_results_2022.csv  processed_results_2023.csv  processed_results_2024.csv  processed_results_2025.csv
f1_race_predition.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sql/: table creation.sql
src/f1_race_predition.egg-info/: SOURCES.txt  top_level.txt
src/features/: build_features.py
src/ingestion/: ingest_ergast.py  ingest_fastf1.py  ingest_openf1.py
src/models/: evaluate.py  train.py
src/processing/: cleaned_data.py
src/utils/: db.py
tests/: test_connection.py
